ユーザーがフォームを再生成したことにより発生するいくつかの不具合を修正

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
 			<div id="site-main">
 				<h1>Hello World!!! </h1>
 				<p>
-					JavaScriptの世界にようこそ
+					ナンバープレース（数独）を解きます。
 				</p>
 				<p>
 					１領域のヨコの長さ：
@@ -42,8 +42,8 @@
 					loading...input
 				</p>
 				<p>
-					<form id="inputY" accept-charset="utf-8" style="margin:20px 15px;">
-						<textarea id="inputTextArea" placeholder="ここに答えが出るよ" cols="60"  rows="8"></textarea><br>
+					<form name="outputTextArea" accept-charset="utf-8">
+						<textarea id="outputTextArea" placeholder="ここに答えが出るよ" cols="60"  rows="8"></textarea><br>
 					</form>
 				</p>
 
