--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/user.css">
-		<title>Hello World</title>
+		<title>ナンバープレースを解こう！</title>
 	</head>
 	<body>
 		<div id="site-box">
@@ -39,7 +39,7 @@
 
 				<h2>入力欄</h2>
 				<p id="inputFormNumberPlace">
-					loading...input
+					問題を入力したら「実行」を押してください。
 				</p>
 				<p>
 					<form name="outputTextArea" accept-charset="utf-8">
