--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
 
 				<h2>入力欄</h2>
 				<p id="inputFormNumberPlace">
-					問題を入力したら「実行」を押してください。
+					loading...inputArea
 				</p>
 				<p>
 					<form name="outputTextArea" accept-charset="utf-8">
@@ -49,7 +49,8 @@
 
 				<h2>出力</h2>
 				<p id="output">
-					loading...2
+					問題を入力したら<br>
+					「実行」を押してください。
 				</p>
 
 			</div>
