--- a/www/index.html
+++ b/www/index.html
@@ -48,9 +48,8 @@
 				</p>
 
 				<h2>出力</h2>
-				<p id="output">
-					問題を入力したら<br>
-					「実行」を押してください。
+				<p id="output" class="allowWrap">
+					問題を入力したら「実行」を押してください
 				</p>
 
 			</div>
